# vfly

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: vfly_omni_adrc_controller.yaml  vfly_omni_pid_controller.yaml  vfly_vehicle.yaml
include/: omni_adrc_controller_node.h  omni_pid_controller_node.h
launch/: mav.launch  omni_adrc_controller.launch  omni_pid_controller.launch  spawn_mav.launch
meshes/vfly/: rotor1_link.STL  rotor3_link.STL  tr1_link.STL
msg/: vfly_pose.msg
src/: move_with_zero_attitude_example.cpp  omni_adrc_controller_node.cpp  omni_pid_controller_node.cpp  rotation_on_fixed_spot_example.cpp
urdf/: tiltable_rotors_base.xacro  vfly_base.xacro  vfly_x.xacro
